--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,25 @@
-:root {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden; 
-  background-color: #242424;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  background-color: #242424;
+  overflow: hidden;
+}
+
+.label > div {
+  font-family: Helvetica, Arial;
+  position: absolute;
+  background: #0008;
+  color: #fff;
+  padding: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 30px;
+  user-select: none;
 }
 
